objects/Release__c.object
<CustomObject>
    <description>This object is used to track SFDC releases.</description>
    <fields>
        <fullName>Change_Type__c</fullName>
        <description>The type of changes that will be included in this release.</description>
        <inlineHelpText>Select the type of changes that will be included in this release. If there is one or more code changes, please choose &quot;Code&quot;.</inlineHelpText>
        <label>Change Type</label>
        <picklist>
            <picklistValues>
                <fullName>Standard Config</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Code</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Code_Walkthrough__c</fullName>
        <defaultValue>false</defaultValue>
        <description>As-built code walkthrough with Technical Architect.</description>
        <label>Code Walkthrough</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Complete__c</fullName>
        <description>This field allows for an approximate percentage of a release to be determined.</description>
        <label>% Complete</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Conflict_Assessment__c</fullName>
        <description>This field contains a description of the findings relating to conflicts from the components/changes included in a given release as they relate to the production environment.</description>
        <label>Conflict Assessment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>This field allows for a description about the release to be entered.</description>
        <label>Description</label>
        <length>130768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>INT_Deployment_Date__c</fullName>
        <description>This date tracks when a release is scheduled to be deployed into the INT (Integration Testing) environment.</description>
        <label>INT Deployment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Knowledge_Transfer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Meeting between development team and production support team to review deployment steps and changes.</description>
        <label>Knowledge Transfer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PRE_Deployment_Date__c</fullName>
        <description>This date tracks when a release is scheduled to be deployed into the PRE environment.</description>
        <label>PRE Deployment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PROD_Deployment_Date__c</fullName>
        <description>This date tracks when a release is scheduled to be deployed into production.</description>
        <label>PROD Deployment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QA_Script_Regression__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Review QA scripts and regression tests to be performed.</description>
        <label>QA Script &amp; Regression</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RTP_Document_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Finalized RTP document generated and attached to the release for all release items.</description>
        <label>RTP Document Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Release_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field contains the name of the user responsible for approving the release.</description>
        <label>Release Approver</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You must select an active internal user.</errorMessage>
            <filterItems>
                <field>User.UserType</field>
                <operation>equals</operation>
                <value>Standard</value>
            </filterItems>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>You must select an active internal user.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Releases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Risk_Assessment__c</fullName>
        <description>This field tracks the risk associated with the release. How likely the release is to be delayed for one or more reasons.</description>
        <inlineHelpText>Pick a status equal to the likeliness that the release is delayed.</inlineHelpText>
        <label>Risk Assessment</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Solution_Design__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Review proposed solution with governance board member prior to development.</description>
        <label>Solution Design</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Standards_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Following best practices and SunPower standards.</description>
        <label>Standards Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>This field shows the date when work will commence for this release.</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>This field displays the current status of a release.</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deployed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deferred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Cases_Included__c</fullName>
        <description>This field stores the total number of cases included in a release.</description>
        <label>Total Number of Cases Included</label>
        <summaryForeignKey>CaseReleaseJunction__c.Release__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>This field identifies what type of release this will be.</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Bug Fix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hotfix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Enhancement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minor Enhancement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Feature</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UAT_Deployment_Date__c</fullName>
        <description>This date tracks when a release is scheduled to be deployed into the UAT environment.</description>
        <label>UAT Deployment Date</label>
        <type>Date</type>
    </fields>
    <label>Release</label>
    <listViews>
        <fullName>Deployed</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>Release_Approver__c</columns>
        <columns>PROD_Deployment_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Deployed</value>
        </filters>
        <label>Deployed</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>L2_Queue_Release</fullName>
        <filterScope>Queue</filterScope>
        <label>L2 Queue</label>
        <queue>L2_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Release Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Releases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>